<resources>
    <string name="app_name">Binku</string>
    <string name="Item_Feed">Feed</string>
    <string name="Item_Videos">Videos</string>
    <string name="Item_Publicar">Publicar</string>
    <string name="Item_Amigos">Amigos</string>
    <string name="Item_Perfil">Perfil</string>">

    <string name="TituloRL">Binku</string>

    <string name="Ingresar_email">Iniciar sesión con Email</string>
    <string name="Ingresar_google">Iniciar sesión con Google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>


    <string name="Txt_registro">Registro de Usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="default_web_client_id">25580175423-ekfukcl56sblajjonumkeuejh8ht1knu.apps.googleusercontent.com</string>

    <!--    Perfil de usuario (fragement_perfil.xml)-->
    <string name="Txt_perfil">Mi Perfil</string>">
    <string name="Txt_informacion">Información</string>">
    <string name="Txt_nombres">Nombre</string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Correo electronico</string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nacimiento</string>
    <string name="Tv_nacimiento"> DD/MM/AAAA</string>
    <string name="Txt_miembro">Miembro desde</string>
    <string name="Tv_miembro"> DD/MM/AAAA</string>
    <string name="Txt_telefono">Teléfono</string>
    <string name="Tv_telefono">9802375082</string>
    <string name="Txt_estado_cuenta">Estado de cuenta </string>">
    <string name="Tv_estado_cuenta">No verificado</string>

    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar Perfil</string>
    <string name="Btn_cerrar_sesion">Cerrar Sesión</string>

    <string name="Txt_editar_perfil">Editar Perfil</string>
    <string name="Et_nombres">Nombre completo</string>
    <string name="Et_f_nac">Fecha de nac.</string>
    <string name="Cod_tef">+00</string>
    <string name="Et_telefono">Teléfono</string>
    <string name="Btn_actualizar">Actualizar</string>


</resources>