<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EditarPerfil">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/Txt_editar_p"
                android:text="@string/Txt_editar_perfil"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Imagen de perfil con botón flotante -->
            <RelativeLayout
                android:id="@+id/perfilRL"
                android:layout_marginTop="15dp"
                android:layout_width="120dp"
                android:layout_height="120dp">

                <ImageView
                    android:id="@+id/img_perfil"
                    android:src="@drawable/ic_login"
                    android:scaleType="centerCrop"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/FABCambiarImg"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    app:fabSize="mini"
                    android:src="@drawable/ic_selec_imagen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <!-- Nombres -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILNombres"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusBottomEnd="50dp">

                <EditText
                    android:id="@+id/Et_nombres"
                    android:hint="@string/Et_nombres"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fecha de nacimiento -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Nac"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusBottomEnd="50dp">

                <EditText
                    android:id="@+id/Et_f_nac"
                    android:hint="@string/Et_f_nac"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Código de país + Numero de telefono -->
            <LinearLayout
                android:id="@+id/RL_Cod_Tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/selectorCod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_rememberLastSelection="true"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="50dp"
                    app:boxCornerRadiusTopEnd="50dp"
                    app:boxCornerRadiusBottomStart="50dp"
                    app:boxCornerRadiusBottomEnd="50dp">

                    <EditText
                        android:id="@+id/Et_telefono"
                        android:hint="@string/Et_telefono"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Botón de Actualizar -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_actualizar"
                android:text="@string/Btn_actualizar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="50dp"
                app:backgroundTint="#800020"
                app:icon="@drawable/ic_editar"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</ScrollView>

